2020-10-02 DJ Lucas <dj@linuxfromscratch.org>
   * make $local_fs a Should-Stop dependency of swap to allow clean install

2020-08-02 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Fix a minor display problem in checkfs

2019-10-31 DJ Lucas <dj@linuxfromscratch.org>
   * Syslog should not start in runlevel 2 due to network logging
   * Remove errant swap dependency for checkfs

2019-10-04 DJ Lucas <dj@linuxfromscratch.org>
   * Additional updates to facilities in LSB headers to keep proper order
   * Network script depends on firewall scripts from BLFS if activated

2019-09-02 DJ Lucas <dj@linuxfromscratch.org>
   * Update facilities in LSB headers

2015-06-24 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Unmount network file systems before bringing down the network
   * Spell out some mount/umount options

2017-03-25 DJ Lucas <dj@linuxfromscratch.org>
   * Bash-4.4 changes no longer allow continue in function to pass to calling
     loop.

2015-02-22 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Cosmetic changes to network scripts' output

2015-02-08 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Modify ipv4-static to support ethernet labels
   * Output a newline if an interface is skipped during boot

2014-12-24 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Clarify rationale for sysklog run levels

2014-11-10 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Make /run/lock have 1777 permissions

2014-07-06 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Remove obsolete reference to /proc/sys/kernel/hotplug in udev boot script

2014-07-02 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Remove obsolete check for /proc/ksyms in modules boot script

2014-06-29 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Remove systemd references and files

2014-03-31 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Changes made to be consistent with common systemd functions

2013-08-21 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Delete duplicate entry in rc.site file.
