@@ -21,8 +21,8 @@
 # Default-Start:       S
 # Default-Stop:
 # Short-Description:   Cleans temporary directories early in the boot process.
-# Description:         Cleans temporary directories /var/run, /var/lock, and
-#                      optionally, /tmp.  cleanfs also creates /var/run/utmp 
+# Description:         Cleans temporary directories /run, /var/lock, and
+#                      optionally, /tmp.  cleanfs also creates /run/utmp 
 #                      and any files defined in /etc/sysconfig/createfiles.
 # X-LFS-Provided-By:   LFS
 ### END INIT INFO
@@ -95,11 +95,11 @@ case "${1}" in
          find . -xdev -mindepth 1 ! -name lost+found -delete || failed=1
       fi
 
-      > /var/run/utmp
+      > /run/utmp
 
       if grep -q '^utmp:' /etc/group ; then
-         chmod 664 /var/run/utmp
-         chgrp utmp /var/run/utmp
+         chmod 664 /run/utmp
+         chgrp utmp /run/utmp
       fi
 
       (exit ${failed})
