@@ -142,7 +142,7 @@ fi
 [ "${interactive}" != "i" ] && interactive=""
 
 # Read the state file if it exists from runlevel S
-[ -r /var/run/interactive ] && source /var/run/interactive
+[ -r /run/interactive ] && source /run/interactive
 
 # Attempt to stop all services started by the previous runlevel,
 # and killed in this runlevel
@@ -217,9 +217,9 @@ done
 
 # Store interactive variable on switch from runlevel S and remove if not
 if [ "${runlevel}" == "S" -a "${interactive}" == "i" ]; then
-    echo "interactive=\"i\"" > /var/run/interactive
+    echo "interactive=\"i\"" > /run/interactive
 else
-    rm -f /var/run/interactive 2> /dev/null
+    rm -f /run/interactive 2> /dev/null
 fi
 
 # Copy the boot log on initial boot only
