@@ -358,8 +358,8 @@ killproc()
             prefix=`echo "${program}" | sed 's/[^/]*$//'`
             progname=`echo "${program}" | sed "s@${prefix}@@"`
 
-            if [ -e "/var/run/${progname}.pid" ]; then
-                rm -f "/var/run/${progname}.pid" 2> /dev/null
+            if [ -e "/run/${progname}.pid" ]; then
+                rm -f "/run/${progname}.pid" 2> /dev/null
             fi
         else
             if [ -e "${pidfile}" ]; then rm -f "${pidfile}" 2> /dev/null; fi
@@ -434,8 +434,8 @@ pidofproc()
         fi
 
         # If a PID file exists with that name, assume that is it.
-        if [ -e "/var/run/${progname}.pid" ]; then
-            pidfile="/var/run/${progname}.pid"
+        if [ -e "/run/${progname}.pid" ]; then
+            pidfile="/run/${progname}.pid"
         fi
     fi
 
@@ -528,9 +528,9 @@ statusproc()
       /bin/echo -e "${INFO}${base} is running with Process" \
          "ID(s) ${pidlist}.${NORMAL}"
    else
-      if [ -n "${base}" -a -e "/var/run/${base}.pid" ]; then
+      if [ -n "${base}" -a -e "/run/${base}.pid" ]; then
          /bin/echo -e "${WARNING}${1} is not running but" \
-            "/var/run/${base}.pid exists.${NORMAL}"
+            "/run/${base}.pid exists.${NORMAL}"
       else
          if [ -n "${pidfile}" -a -e "${pidfile}" ]; then
             /bin/echo -e "${WARNING}${1} is not running" \
