@@ -43,6 +43,22 @@
     appropriate for the entry or if needed the entire day's listitem.
     -->
     <listitem>
+      <para>2021-01-13</para>
+      <itemizedlist>
+        <listitem revision="systemd">
+          <para>[xry111] - Fix util-linux uuidd socket path.</para>
+        </listitem>
+        <listitem>
+          <para>[xry111] - Remove various references to deprecated
+          /var/run, use /run insteadly.</para>
+        </listitem>
+        <listitem revision="sysv">
+          <para>[xry111] - Update to lfs-bootscripts-20210113.</para>
+        </listitem>
+      </itemizedlist>
+    </listitem>
+
+    <listitem>
       <itemizedlist>
       <para>2021-01-01</para>
         <listitem>
