@@ -19,7 +19,7 @@
   </indexterm>
 
   <indexterm zone="ch-tools-createfiles">
-    <primary sortas="e-/var/run/utmp">/var/run/utmp</primary>
+    <primary sortas="e-/run/utmp">/run/utmp</primary>
   </indexterm>
 
   <indexterm zone="ch-tools-createfiles">
@@ -69,7 +69,7 @@ EOF</userinput></screen>
 <literal>root:x:0:0:root:/root:/bin/bash
 bin:x:1:1:bin:/dev/null:/bin/false
 daemon:x:6:6:Daemon User:/dev/null:/bin/false
-messagebus:x:18:18:D-Bus Message Daemon User:/var/run/dbus:/bin/false
+messagebus:x:18:18:D-Bus Message Daemon User:/run/dbus:/bin/false
 systemd-bus-proxy:x:72:72:systemd Bus Proxy:/:/bin/false
 systemd-journal-gateway:x:73:73:systemd Journal Gateway:/:/bin/false
 systemd-journal-remote:x:74:74:systemd Journal Remote:/:/bin/false
