@@ -58,7 +58,8 @@
             --disable-runuser    \
             --disable-pylibmount \
             --disable-static     \
-            --without-python</userinput></screen>
+            --without-python     \
+            runstatedir=/run</userinput></screen>
 
     <variablelist>
       <title>The meaning of the configure options:</title>
@@ -87,6 +88,15 @@
         <listitem>
           <para>This switch disables using <application>Python</application>.
           It avoids trying to build unneeded bindings.</para>
+        </listitem>
+      </varlistentry>
+
+      <varlistentry>
+        <term><parameter>runstatedir=/run</parameter></term>
+        <listitem>
+          <para>This switch sets the location of the socket used by
+          <command>uuidd</command> and
+          <filename class="libraryfile">libuuid</filename> correctly.</para>
         </listitem>
       </varlistentry>
 
