@@ -472,7 +472,7 @@ meson --prefix=/usr                 \
         <term><command>runlevel</command></term>
         <listitem>
           <para>Outputs the previous and the current run-level, as noted in the
-          last run-level record in <filename>/var/run/utmp</filename></para>
+          last run-level record in <filename>/run/utmp</filename></para>
           <indexterm zone="ch-system-systemd runlevel">
             <primary sortas="b-runlevel">runlevel</primary>
           </indexterm>
