@@ -185,7 +185,7 @@
         <term><command>runlevel</command></term>
         <listitem>
           <para>Reports the previous and the current run-level, as noted in the
-          last run-level record in <filename>/var/run/utmp</filename></para>
+          last run-level record in <filename>/run/utmp</filename></para>
           <indexterm zone="ch-system-sysvinit runlevel-sysv">
             <primary sortas="b-runlevel">runlevel</primary>
           </indexterm>
