@@ -76,7 +76,8 @@
             --disable-runuser    \
             --disable-pylibmount \
             --disable-static     \
-            --without-python</userinput></screen>
+            --without-python     \
+            runstatedir=/run</userinput></screen>
 
     <para>The --disable and --without options prevent warnings about
     building components that require packages not in LFS or are 
