@@ -85,9 +85,9 @@
         <term><command>cleanfs</command></term>
         <listitem>
           <para>Removes files that should not be preserved between reboots, such
-          as those in <filename class="directory">/var/run/</filename> and
+          as those in <filename class="directory">/run/</filename> and
           <filename class="directory">/var/lock/</filename>; it re-creates
-          <filename>/var/run/utmp</filename> and removes the possibly present
+          <filename>/run/utmp</filename> and removes the possibly present
           <filename>/etc/nologin</filename>, <filename>/fastboot</filename>, and
           <filename>/forcefsck</filename> files</para>
           <indexterm zone="ch-config-bootscripts cleanfs-bootscripts">
