@@ -1,13 +1,13 @@
-<!ENTITY version         "SVN-20210101">
+<!ENTITY version         "SVN-20210113">
 <!ENTITY short-version   "svn">  <!-- Used below in &blfs-book; 
                                       Change to x.y for release but not -rc releases -->
 <!ENTITY generic-version "development"> <!-- Use "development"  or "x.y[-pre{x}]" -->
 
-<!ENTITY versiond        "20210101-systemd">
+<!ENTITY versiond        "20210113-systemd">
 <!ENTITY short-versiond  "systemd">
 <!ENTITY generic-versiond "systemd"> 
 
-<!ENTITY releasedate     "January 1st, 2021">
+<!ENTITY releasedate     "January 13th, 2021">
 
 <!ENTITY copyrightdate   "1999-2021"><!-- jhalfs needs a literal dash, not &ndash; -->
 
