@@ -1,3 +1,6 @@
+2021-01-13 Xi Ruoyao <xry111@mengyan1223.wang>
+   * Use /run instead of deprecated /var/run
+
 2020-10-02 DJ Lucas <dj@linuxfromscratch.org>
    * make $local_fs a Should-Stop dependency of swap to allow clean install
 
